--- a/root/webapp/main.css
+++ b/root/webapp/main.css
@@ -62,7 +62,7 @@ button:disabled {
 .buttonCopy:hover {
   color:darkgoldenrod;
 }
-a {
+a:not(.regularLink) {
   border:1px solid white;
   border-radius: 8px;
   padding-left:6px;
